--- a/.github/workflows/dataform.yml
+++ b/.github/workflows/dataform.yml
@@ -22,6 +22,10 @@ jobs:
         run: gpg --quiet --batch --yes --decrypt --passphrase="$CREDENTIALS_GPG_PASSPHRASE" --output .df-credentials.json .df-credentials.json.gpg
         env:
             CREDENTIALS_GPG_PASSPHRASE: ${{ secrets.CREDENTIALS_GPG_PASSPHRASE }}
+      - name: compile the project 
+        uses: docker://dataformco/dataform:latest
+        with:
+          args: compile
       - name: Dry-run dataform 
         uses: docker://dataformco/dataform:latest
         with:
